--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 HELP.md
-!target/*.jar
+!target/demo-0.0.1-SNAPSHOT.jar
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
-target/**
+target/
 
 ### STS ###
 .apt_generated
