--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@ HELP.md
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
-target/
+target/*/
+target/demo-0.0.1-SNAPSHOT.jar.original
+
 
 ### STS ###
 .apt_generated
